# libktts-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  renovate.json  run.sh  rust-toolchain
.github/workflows/: actionlint.yml  ci.yml  review.yml
assets/: index.html
src/: ffi.rs  main.rs  model.rs  web.rs
