[package]
name = "libktts-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["json"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
libc = "0.2.177"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt", "net", "signal", "sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
utf16string = "0.2.0"
